name: maxBipartiteMatching

version:             0.1.0.0

synopsis: Maximum cardinality bipartite matching

description: Find a maximum cardinality matching on a bipartite graph,
             using an augmenting path algorithm.  More efficient than
             using MaxFlow from FGL with constant weight and additional
             source and sink nodes.

homepage: http://stefan-klinger.de/

license: OtherLicense

license-file: LICENSE

author: Stefan Klinger

category: Data

build-type: Simple

cabal-version: >=1.8


library
  exposed-modules: Data.Graph.MaxBipartiteMatching

  build-depends: base, containers

                 
test-suite test-MaxBipartiteMatching
  type: exitcode-stdio-1.0
  main-is: tests/quickcheck.lhs
  build-depends: base, containers, QuickCheck
  extensions: EmptyDataDecls
