name: maxBipartiteMatching

version:             0.1.0.0

synopsis: Maximum cardinality bipartite matching

description: Find a maximum cardinality matching on a bipartite graph,
             using an augmenting path algorithm.  More efficient than
             using MaxFlow from FGL with constant weight and additional
             source and sink nodes.

homepage: http://stefan-klinger.de/

license: OtherLicense
license-file: LICENSE
author: Stefan Klinger

category: Data

build-type: Simple
cabal-version: >=1.8


flag buildPerfTest
    description: Build performance testing and comparison
    default: False

library
    exposed-modules: Data.Graph.MaxBipartiteMatching
    hs-source-dirs: src
    build-depends: base, containers
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches -Werror

executable matcher
    main-is: Matcher.lhs
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches -Werror
    build-depends: base, containers
                                  
test-suite quickcheck
    type: exitcode-stdio-1.0
    main-is: quickcheck.lhs
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches -Werror
    hs-source-dirs: src, tests
    build-depends: base, containers, QuickCheck
    extensions: EmptyDataDecls

test-suite fgl-qc
    type: exitcode-stdio-1.0
    main-is: fgl-qc.lhs
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches -Werror
    hs-source-dirs: src, tests
    build-depends: base, containers, QuickCheck, fgl
    extensions: EmptyDataDecls

executable fgl
    if flag(buildPerfTest)
        buildable: True
    else
        buildable: False
    main-is: fgl.lhs
    hs-source-dirs: src, tests
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches -Werror
    build-depends: base, containers, fgl
    extensions: EmptyDataDecls

test-suite danilenko-qc
    type: exitcode-stdio-1.0
    main-is: danilenko-qc.lhs
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches -Werror
    hs-source-dirs: src, tests
    build-depends: base, containers, QuickCheck
    extensions: EmptyDataDecls

executable danilenko
    if flag(buildPerfTest)
        buildable: True
    else
        buildable: False
    main-is: danilenko.lhs
    hs-source-dirs: src, tests
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches -Werror
    build-depends: base, containers, fgl
    extensions: EmptyDataDecls

executable mkGraphs
    if flag(buildPerfTest)
        buildable: True
    else
        buildable: False
    main-is: mkGraphs.lhs
    hs-source-dirs: src, tests
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches -Werror -threaded
    build-depends: base, containers, QuickCheck, parallel-io, directory
    extensions: EmptyDataDecls
